Bug fix not showing individually banned card names

--- a/cardDatabase/static/css/view_card.css
+++ b/cardDatabase/static/css/view_card.css
@@ -187,3 +187,7 @@
 .banned-icon, .ban-text{
     display: inline;
 }
+
+.banlist-title{
+    display: block;
+}
